--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^8.1.5",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.0"
   }
 }
